Fix the z-index for the price list.

--- a/frontend/themes/froniusvizualizer/components/vaadin-app-layout.css
+++ b/frontend/themes/froniusvizualizer/components/vaadin-app-layout.css
@@ -1,3 +1,7 @@
 [part='drawer'] {
     width: 12.5rem;
 }
+
+:host([overlay]) [part='drawer'] {
+    z-index: 11;
+}
